--- a/src/WebUI/ClientApp/package.json
+++ b/src/WebUI/ClientApp/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "clean2.webui",
+  "name": "CleanArchitecture.webui",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "echo 'Starting...' && ng serve",
     "start:dev": "echo 'Starting (Dev)...' && ng serve --host 0.0.0.0 --disable-host-check",
     "build": "ng build",
-    "build:ssr": "ng run Clean2.WebUI:server:dev",
+    "build:ssr": "ng run CleanArchitecture.WebUI:server:dev",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
